src/objects/Account_Review__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts Reviews</relationshipLabel>
        <relationshipName>Accounts_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Contacts_Description__c</fullName>
        <label>Customer Contacts Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Contacts__c</fullName>
        <inlineHelpText>Are there enough relevant customer contacts with the correct level of authority and influence that are Key Decision Makers included in the Relationship Development Mosaic?   0 : Poor  5: More is needed  20: Good  25: Outstanding Performance</inlineHelpText>
        <label>Customer Contacts (0~25)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Plan_Description__c</fullName>
        <label>Engagement Plan Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engagement_Plan__c</fullName>
        <inlineHelpText>&quot;Does the Salesperson have the relevant amount of customer meetings, calls and actions planned to develop the account and progress opportunities?   0 : Poor  5: More is needed  20: Good  25: Outstanding Performance&quot;</inlineHelpText>
        <label>Engagement Plan (0~25)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Growth_Strategy_Description__c</fullName>
        <label>Growth Strategy Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Growth_Strategy__c</fullName>
        <inlineHelpText>Does the Growth Strategy tool contain ideas on how the Salesperson will open up new opportunities/sources of revenues?   0 : Poor  5: More is needed  20: Good  25: Outstanding Performance</inlineHelpText>
        <label>Growth Strategy (0~25)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Revenues_Description__c</fullName>
        <label>Sales/Revenues Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Seles_Revenues__c</fullName>
        <inlineHelpText>Does the Salesperson have enough quality opportunities with a high percentage outcome in their pipeline that will their deliver Sales and Revenue in order to achieve their target?   0 : Poor  5: More is needed  20: Good  25: Outstanding Performance</inlineHelpText>
        <label>Sales/Revenues (0~25)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <formula>Customer_Contacts__c + Engagement_Plan__c + Growth_Strategy__c +  Seles_Revenues__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Review</label>
    <nameField>
        <label>Nombre de Account Review</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Customer_Contacts_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>Customer_Contacts__c &gt; 25 || Customer_Contacts__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Customer_Contacts__c</errorDisplayField>
        <errorMessage>El valor debe ser mayor que 0 y menor que 25</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Engagement_Plan_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>Engagement_Plan__c &gt; 25 || Engagement_Plan__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Engagement_Plan__c</errorDisplayField>
        <errorMessage>El valor debe ser mayor que 0 y menor que 25</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Growth_Strategy_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>Growth_Strategy__c &gt; 25 || Growth_Strategy__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Growth_Strategy__c</errorDisplayField>
        <errorMessage>El valor debe ser mayor que 0 y menor que 25</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Revenue_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>Seles_Revenues__c &gt; 25 || Seles_Revenues__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Seles_Revenues__c</errorDisplayField>
        <errorMessage>El valor debe ser mayor que 0 y menor que 25</errorMessage>
    </validationRules>
</CustomObject>